--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
+    "babel-regenerator-runtime": "^6.5.0",
+    "bcrypt": "^1.0.2",
     "compress": "^0.99.0",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
@@ -21,5 +23,10 @@
     "pg": "^6.1.2",
     "pm2": "^2.2.3",
     "sequelize": "^3.29.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
+    "babel-plugin-transform-regenerator": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.22.0"
   }
 }
