--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-request-id": "^1.2.0",
+    "knex": "^0.12.6",
     "node-fetch": "^1.6.3",
     "pg": "^6.1.2",
     "pm2": "^2.2.3",
-    "sequelize": "^3.29.0"
+    "sequelize": "^3.29.0",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-regenerator": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "chai": "^3.5.0",
     "supertest": "^2.0.1"
   }
 }
