--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --require test/setup test/**/*.test.js",
-    "test:watch": "mocha --watch --require test/setup test/**/*.test.js"
+    "test:watch": "mocha --watch --require test/setup test/**/*.test.js",
+    "migrate": "./node_modules/.bin/sequelize db:migrate",
+    "migrate:undo": "./node_modules/.bin/sequelize db:migrate:undo",
+    "initdb": "./scripts/initdb"
   },
   "author": "InterAl",
   "license": "ISC",
@@ -16,6 +19,7 @@
     "babel-preset-stage-2": "^6.18.0",
     "babel-regenerator-runtime": "^6.5.0",
     "bcrypt": "^1.0.2",
+    "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "compress": "^0.99.0",
     "compression": "^1.6.2",
@@ -34,6 +38,7 @@
     "babel-plugin-transform-regenerator": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "chai": "^3.5.0",
+    "sequelize-cli": "^2.5.1",
     "supertest": "^2.0.1"
   }
 }
