--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-plugin-transform-regenerator": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "chai": "^3.5.0",
+    "chai-shallow-deep-equal": "^1.4.4",
     "sequelize-cli": "^2.5.1",
     "supertest": "^2.0.1"
   }
