--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.14.0",
     "express-request-id": "^1.2.0",
     "knex": "^0.12.6",
+    "lodash": "^4.17.4",
     "node-fetch": "^1.6.3",
     "pg": "^6.1.2",
     "pm2": "^2.2.3",
