--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "argv": "0.0.2",
+    "aws-sdk": "^2.15.0",
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
@@ -29,6 +30,7 @@
     "express-request-id": "^1.2.0",
     "knex": "^0.12.6",
     "lodash": "^4.17.4",
+    "multer": "^1.3.0",
     "node-fetch": "^1.6.3",
     "pg": "^6.1.2",
     "pm2": "^2.2.3",
