--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "lodash": "^4.17.4",
     "multer": "^1.3.0",
     "node-fetch": "^1.6.3",
+    "oy-vey": "^0.8.0",
     "pg": "^6.1.2",
     "pm2": "^2.2.3",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "sequelize": "^3.29.0",
     "uuid": "^3.0.1"
   },
