--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:noinit": "./test/run noinit",
     "migrate": "./node_modules/.bin/sequelize db:migrate",
     "migrate:undo": "./node_modules/.bin/sequelize db:migrate:undo",
-    "initdb": "./scripts/initdb"
+    "initdb": "./scripts/initdb",
+    "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "author": "InterAl",
   "license": "ISC",
@@ -41,6 +42,7 @@
     "uuid": "^3.0.1"
   },
   "devDependencies": {
+    "@kadira/storybook": "^2.35.3",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-regenerator": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.22.0",
