--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "./test/run",
     "test:noinit": "./test/run noinit",
+    "test:watch": "mocha --watch --require test/setup",
     "migrate": "./node_modules/.bin/sequelize db:migrate",
     "migrate:undo": "./node_modules/.bin/sequelize db:migrate:undo",
     "initdb": "./scripts/initdb",
@@ -33,6 +34,7 @@
     "lodash": "^4.17.4",
     "multer": "^1.3.0",
     "node-fetch": "^1.6.3",
+    "nodemailer": "^3.1.3",
     "oy-vey": "^0.8.0",
     "pg": "^6.1.2",
     "pm2": "^2.2.3",
@@ -48,7 +50,10 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "chai": "^3.5.0",
     "chai-shallow-deep-equal": "^1.4.4",
+    "proxyquire": "^1.7.11",
     "sequelize-cli": "^2.5.1",
-    "supertest": "^2.0.1"
+    "sinon": "^1.17.7",
+    "supertest": "^2.0.1",
+    "wait-for-cond": "^1.0.3"
   }
 }
