--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "compress": "^0.99.0",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.6",
     "express": "^4.14.0",
     "express-request-id": "^1.2.0",
     "knex": "^0.12.6",
