--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-request-id": "^1.2.0",
     "knex": "^0.12.6",
     "lodash": "^4.17.4",
+    "moment": "^2.17.1",
     "multer": "^1.3.0",
     "node-fetch": "^1.6.3",
     "nodemailer": "^3.1.3",
