--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "chai": "^3.5.0",
     "chai-shallow-deep-equal": "^1.4.4",
+    "omit-deep-lodash": "^0.8.1",
     "proxyquire": "^1.7.11",
     "sequelize-cli": "^2.5.1",
     "sinon": "^1.17.7",
