using request-local instead of node's domain

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "pm2": "^2.2.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "request-local": "^1.0.4",
     "sequelize": "^3.29.0",
     "uuid": "^3.0.1"
   },
