--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "migrate:undo": "./node_modules/.bin/sequelize db:migrate:undo",
     "initdb": "./scripts/initdb",
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "start:prod": "sudo PORT=80 ENV=production ./node_modules/.bin/pm2 start index.js --name resonators",
+    "start:prod": "sudo NODE_ENV=production ENV=production PORT=80 ./node_modules/.bin/pm2 start index.js --name resonators",
     "restart:prod": "sudo pm2 restart resonators"
   },
   "author": "InterAl",
@@ -49,7 +49,8 @@
     "request-local": "^1.0.4",
     "sequelize": "^3.29.0",
     "uuid": "^3.0.1",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+    "winston-logrotate": "^1.0.1"
   },
   "devDependencies": {
     "@kadira/storybook": "^2.35.3",
