--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "compress": "^0.99.0",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.1",
     "ddd-helpers": "^0.3.0",
     "ejs": "^2.5.6",
     "express": "^4.14.0",
