--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "source ~/.nvm/nvm.sh && nvm use && ENV=dev node index.js",
-    "test": "./test/run",
-    "test:noinit": "./test/run noinit",
-    "test:watch": "mocha --watch --require test/setup",
+    "test": "source ~/.nvm/nvm.sh && nvm use && ./test/run -- --watch test/**/*.test.js",
+    "test:noinit": "source ~/.nvm/nvm.sh && nvm use && ./test/run noinit -- --watch test/**/*.test.js",
+    "test:watchSingle": "source ~/.nvm/nvm.sh && nvm use && ./test/run noinit -- --watch",
     "migrate": "./node_modules/.bin/sequelize db:migrate",
     "migrate:undo": "./node_modules/.bin/sequelize db:migrate:undo",
     "initdb": "./scripts/initdb",
@@ -36,6 +36,7 @@
     "ejs": "^2.5.6",
     "express": "^4.14.0",
     "express-request-id": "^1.2.0",
+    "googleapis": "^19.0.0",
     "knex": "^0.12.6",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
