--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
-    "ddd-helpers": "^0.3.0",
+    "ddd-helpers": "latest",
     "ejs": "^2.5.6",
     "express": "^4.14.0",
     "express-request-id": "^1.2.0",
