--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "source ~/.nvm/nvm.sh && nvm use && ./test/run -- --watch test/**/*.test.js",
     "test:noinit": "source ~/.nvm/nvm.sh && nvm use && ./test/run noinit -- --watch test/**/*.test.js",
     "test:watchSingle": "source ~/.nvm/nvm.sh && nvm use && ./test/run noinit -- --watch",
+    "lint": "eslint ./src",
     "migrate": "./node_modules/.bin/sequelize db:migrate",
     "migrate:undo": "./node_modules/.bin/sequelize db:migrate:undo",
     "model:create": "sequelize model:create --name table_name --attributes 'field_1:string, field_2:string'",
@@ -57,11 +58,15 @@
   },
   "devDependencies": {
     "@kadira/storybook": "^2.35.3",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-regenerator": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "chai": "^3.5.0",
     "chai-shallow-deep-equal": "^1.4.4",
+    "eslint": "^4.1.1",
+    "eslint-plugin-react": "^7.1.0",
+    "mocha": "^3.4.2",
     "omit-deep-lodash": "^0.8.1",
     "proxyquire": "^1.7.11",
     "sequelize-cli": "^2.5.1",
