--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-regenerator-runtime": "^6.5.0",
-    "bcrypt": "^1.0.2",
+    "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "compress": "^0.99.0",
@@ -51,7 +51,6 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "request-local": "^1.0.4",
-    "sequelize": "^3.29.0",
     "uuid": "^3.0.1",
     "winston": "^2.3.1",
     "winston-logrotate": "^1.0.1"
@@ -69,7 +68,8 @@
     "mocha": "^3.4.2",
     "omit-deep-lodash": "^0.8.1",
     "proxyquire": "^1.7.11",
-    "sequelize-cli": "^2.5.1",
+    "sequelize": "^3.30.4",
+    "sequelize-cli": "^2.7.0",
     "sinon": "^1.17.7",
     "supertest": "^2.0.1",
     "wait-for-cond": "^1.0.3"
