--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint ./src",
     "migrate": "./node_modules/.bin/sequelize db:migrate",
     "migrate:undo": "./node_modules/.bin/sequelize db:migrate:undo",
-    "model:create": "sequelize model:create --name table_name --attributes 'field_1:string, field_2:string'",
+    "model:create": "sequelize model:create --underscored --name table_name --attributes 'field_1:string, field_2:string'",
     "initdb": "./scripts/initdb",
     "storybook": "start-storybook -p 9007 -c .storybook",
     "start:prod": "sudo NODE_ENV=production ENV=production PORT=80 ./node_modules/.bin/pm2 start index.js --name resonators",
