--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "model:create": "sequelize model:create --underscored --name table_name --attributes 'field_1:string, field_2:string'",
     "initdb": "./scripts/initdb",
     "storybook": "start-storybook -p 9007 -c .storybook",
-    "start:prod": "sudo NODE_ENV=production ENV=production PORT=80 ./node_modules/.bin/pm2 start index.js --name resonators",
+    "start:prod": "sudo NODE_ENV=production ENV=production HTTP_PORT=80 HTTPS_PORT=443 ./node_modules/.bin/pm2 start index.js --name resonators",
     "restart:prod": "sudo pm2 restart resonators"
   },
   "author": "InterAl",
