--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "model:create": "sequelize model:create --underscored --name table_name --attributes 'field_1:string, field_2:string'",
     "initdb": "./scripts/initdb",
     "storybook": "start-storybook -p 9007 -c .storybook",
-    "start:prodHttp": "sudo PORT=80 ./node_modules/.bin/pm2 start index.http.js --name resonatorsHttp",
-    "start:prodHttps": "sudo HTTPS_PORT=443 ./node_modules/.bin/pm2 start index.js --name resonatorsHttps",
-    "start:prod": "npm NODE_ENV=production ENV=production run start:prodHttp && npm run start:prodHttps",
+    "start:prodHttp": "sudo NODE_ENV=production ENV=production PORT=80 ./node_modules/.bin/pm2 start index.http.js --name resonatorsHttp",
+    "start:prodHttps": "sudo NODE_ENV=production ENV=production HTTPS_PORT=443 ./node_modules/.bin/pm2 start index.js --name resonatorsHttps",
+    "start:prod": "npm run start:prodHttp && npm run start:prodHttps",
     "restart:prod": "sudo pm2 restart resonators"
   },
   "author": "InterAl",
