--- a/src/db/sequelize/config/config.json
+++ b/src/db/sequelize/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
     "username": "postgres",
-    "password": null,
+    "password": "Password123",
     "database": "resonators_dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": null,
+    "password": "Password123",
     "database": "resonators_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
     "username": "postgres",
-    "password": null,
+    "password": "Password123",
     "database": "resonators_prod",
     "host": "127.0.0.1",
     "dialect": "postgres"
