--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "request-local": "^1.0.4",
+    "ts-node": "^3.3.0",
+    "typescript": "^2.4.2",
     "uuid": "^3.0.1",
     "winston": "^2.3.1",
     "winston-logrotate": "^1.0.1"
