--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "storybook": "start-storybook -p 9007 -c .storybook",
     "start:prodHttp": "sudo NODE_ENV=production ENV=production PORT=80 ./node_modules/.bin/pm2 start index.http.js --name resonatorsHttp",
     "start:prodHttps": "sudo NODE_ENV=production ENV=production HTTPS_PORT=443 ./node_modules/.bin/pm2 start index.js --name resonatorsHttps",
-    "start:prod": "npm run start:prodHttp && npm run start:prodHttps",
+    "start:prod": "npm run start:prodHttp",
     "restart:prod": "sudo pm2 restart resonatorsHttp resonatorsHttps"
   },
   "author": "InterAl",
