--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "initdb": "./scripts/initdb",
     "storybook": "start-storybook -p 9007 -c .storybook",
     "start:prodHttp": "sudo NODE_ENV=production ENV=production PORT=80 ./node_modules/.bin/pm2 start index.http.js --name resonatorsHttp",
-    "start:prodHttps": "sudo NODE_ENV=production ENV=production HTTPS_PORT=443 ./node_modules/.bin/pm2 start index.js --name resonatorsHttps",
-    "start:prod": "npm run start:prodHttp",
+    "start:prodHttps": "sudo NODE_ENV=production ENV=production HTTPS_PORT=443 HTTP_PORT=80 ./node_modules/.bin/pm2 start index.js --name resonatorsHttps",
+    "start:prod": "npm run start:prodHttps",
     "restart:prod": "sudo pm2 restart resonatorsHttp resonatorsHttps"
   },
   "author": "InterAl",
