--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "model:create": "sequelize model:create --underscored --name table_name --attributes 'field_1:string, field_2:string'",
     "initdb": "./scripts/initdb",
     "storybook": "start-storybook -p 9007 -c .storybook",
-    "start:prodHttp": "sudo NODE_ENV=production ENV=production PORT=80 ./node_modules/.bin/pm2 start index.http.js --name resonatorsHttp",
-    "start:prodHttps": "sudo NODE_ENV=production ENV=production HTTPS_PORT=443 HTTP_PORT=80 ./node_modules/.bin/pm2 start index.js --name resonatorsHttps",
+    "start:prodHttp": "sudo NODE_ENV=production ENV=production PORT=80 ./node_modules/.bin/pm2 -f start index.http.js --name resonatorsHttp",
+    "start:prodHttps": "sudo NODE_ENV=production ENV=production HTTPS_PORT=443 HTTP_PORT=80 ./node_modules/.bin/pm2 -f start index.js --name resonatorsHttps",
     "start:prod": "npm run start:prodHttps",
     "restart:prod": "sudo pm2 restart resonatorsHttp resonatorsHttps"
   },
