Dockerfile improvements, config support for docker.

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "test:noinit": "source ~/.nvm/nvm.sh && nvm use && ./test/run noinit -- --watch test/**/*.test.js",
     "test:watchSingle": "source ~/.nvm/nvm.sh && nvm use && ./test/run noinit -- --watch",
     "lint": "eslint ./src",
-    "migrate": "./node_modules/.bin/sequelize db:migrate",
-    "migrate:undo": "./node_modules/.bin/sequelize db:migrate:undo",
-    "model:create": "sequelize model:create --underscored --name table_name --attributes 'field_1:string, field_2:string'",
+    "migrate": "./node_modules/.bin/sequelize --config /usr/app/src/db/sequelize/config/config.js db:migrate",
+    "migrate:undo": "./node_modules/.bin/sequelize --config /usr/app/src/db/sequelize/config/config.js db:migrate:undo",
+    "model:create": "sequelize --config /usr/app/src/db/sequelize/config/config.js model:create --underscored --name table_name --attributes 'field_1:string, field_2:string'",
     "initdb": "./scripts/initdb",
     "storybook": "start-storybook -p 9007 -c .storybook",
     "start:prodHttp": "sudo NODE_ENV=production ENV=production PORT=80 ./node_modules/.bin/pm2 -f start index.http.js --name resonatorsHttp",
