--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ejs": "^2.5.6",
     "express": "^4.14.0",
     "express-request-id": "^1.2.0",
+    "express-useragent": "^1.0.13",
     "googleapis": "^19.0.0",
     "knex": "^0.12.6",
     "lodash": "^4.17.4",
