--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "oy-vey": "^0.8.0",
     "pg": "^6.1.2",
     "pm2": "^2.2.3",
+    "ramda": "^0.27.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "request-local": "^1.0.4",
