--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "express-request-id": "^1.2.0",
     "express-useragent": "^1.0.13",
     "googleapis": "^19.0.0",
+    "gulp": "^3.9.1",
     "knex": "^0.12.6",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "multer": "^1.3.0",
     "node-fetch": "^1.6.3",
     "nodemailer": "^3.1.3",
+    "nvm": "0.0.4",
     "oy-vey": "^0.8.0",
     "pg": "^6.1.2",
     "pm2": "^2.2.3",
