--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "node-fetch": "^1.6.3",
     "nodemailer": "^3.1.3",
     "oy-vey": "^0.8.0",
+    "papaparse": "^5.2.0",
     "pg": "^6.1.2",
     "pm2": "^2.2.3",
     "ramda": "^0.27.0",
