--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
+    "csv-stringify": "^5.5.1",
     "ddd-helpers": "latest",
     "ejs": "^2.5.6",
     "express": "^4.14.0",
@@ -52,7 +53,6 @@
     "node-fetch": "^1.6.3",
     "nodemailer": "^3.1.3",
     "oy-vey": "^0.8.0",
-    "papaparse": "^5.2.0",
     "pg": "^6.1.2",
     "pm2": "^2.2.3",
     "ramda": "^0.27.0",
