--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": ". ~/.nvm/nvm.sh && nvm use && ENV=dev node index.js",
-    "win-start": "nvm use 7.5.0 && SET ENV=dev && node index.js",
+    "win-start": "nvm use && SET ENV=dev && node index.js",
     "test": ". ~/.nvm/nvm.sh && nvm use && ./test/run -- --watch test/**/*.test.js",
-    "win-test": "nvm use 7.5.0 && ./test/run -- --watch test/**/*.test.js",
+    "win-test": "nvm use && ./test/run -- --watch test/**/*.test.js",
     "test:noinit": ". ~/.nvm/nvm.sh && nvm use && ./test/run noinit -- --watch test/**/*.test.js",
     "test:watchSingle": ". ~/.nvm/nvm.sh && nvm use && ./test/run noinit -- --watch",
     "lint": "eslint ./src",
@@ -17,10 +17,8 @@
     "initdb": "./scripts/initdb",
     "win-initdb": "node scripts\\initdb",
     "storybook": "start-storybook -p 9007 -c .storybook",
-    "start:prodHttp": "sudo NODE_ENV=production ENV=production PORT=80 ./node_modules/.bin/pm2 -f start index.http.js --name resonatorsHttp",
-    "start:prodHttps": "sudo NODE_ENV=production ENV=production HTTPS_PORT=443 HTTP_PORT=80 ./node_modules/.bin/pm2 -f start index.js --name resonatorsHttps",
-    "start:prod": "npm run start:prodHttps",
-    "restart:prod": "sudo pm2 restart resonatorsHttps"
+    "start:prod": "sudo NODE_ENV=production ENV=production ./node_modules/.bin/pm2 -f start index.js --name resonators",
+    "restart:prod": "sudo pm2 restart resonators"
   },
   "author": "InterAl",
   "license": "ISC",
