--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dom": "^15.4.2",
     "request-local": "^1.0.4",
     "uuid": "^3.0.1",
+    "web-push": "^3.4.4",
     "winston": "^2.3.1",
     "winston-logrotate": "^1.0.1"
   },
