--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
     "sinon": "^9.0.3",
     "supertest": "^4.0.2",
     "wait-for-cond": "^1.7.0"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.1.3"
   }
 }
