--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@babel/runtime": "^7.11.2",
     "aws-sdk": "^2.751.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -41,8 +42,10 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "oy-vey": "^0.11.2",
+    "pg": "^8.3.3",
     "ramda": "^0.27.1",
     "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "request-local": "^1.0.5",
     "sequelize": "^6.3.5",
     "uuid": "^8.3.0",
