--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.17.1",
     "express-request-id": "^1.4.1",
     "express-useragent": "^1.0.15",
+    "google-spreadsheet": "^3.0.13",
     "googleapis": "^59.0.0",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
