--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "resonators-server",
   "version": "1.0.0",
@@ -37,6 +36,7 @@
     "express-request-id": "^1.4.1",
     "express-useragent": "^1.0.15",
     "googleapis": "^59.0.0",
+    "indent-string": "^4.0.0",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "multer": "^1.4.2",
