--- a/src/db/sequelize/config/config.json
+++ b/src/db/sequelize/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": null,
+    "password": "resonator",
     "database": "resonators_dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
